feat: define app architecture and add a few tools

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "webdevtoys",
+  "name": "cybertoys",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/css": "^11.7.1",
+    "@fluentui/react": "^8.62.0",
+    "@fluentui/react-hooks": "^8.5.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,8 +13,15 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
+    "html-entities": "^2.3.3",
+    "jose": "^4.6.1",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
+    "mobx-state-tree": "^5.1.3",
+    "mobx-utils": "^6.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^0.2.4",
@@ -37,7 +47,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:mobx/recommended"
     ]
   },
   "browserslist": {
@@ -51,5 +62,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-mobx": "^0.0.8"
   }
 }
