--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "workbox-strategies": "^5.1.4",
     "workbox-streams": "^5.1.4"
   },
+  "homepage": "https://stefano.brilli.me/cybertoys/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
