--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
+    "@types/spark-md5": "^3.0.2",
     "html-entities": "^2.3.3",
     "jose": "^4.6.1",
     "mobx": "^6.5.0",
@@ -23,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "spark-md5": "^3.0.2",
     "typescript": "^4.6.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
