--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,16 +3,16 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "48x48 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "cybertoys-256.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "256x256"
     },
     {
-      "src": "logo512.png",
+      "src": "cybertoys-512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
@@ -20,5 +20,5 @@
   "start_url": ".",
   "display_override": ["window-controls-overlay", "standalone"],
   "display": "standalone",
-  "background_color": "#ffffff"
+  "background_color": "#202020"
 }
