--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/mersenne-twister": "^1.1.2",
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
     "@types/spark-md5": "^3.0.2",
     "html-entities": "^2.3.3",
     "jose": "^4.6.1",
+    "lorem-ipsum": "^2.0.4",
+    "mersenne-twister": "^1.1.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "mobx-state-tree": "^5.1.3",
