--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/codemirror": "^5.60.5",
     "@types/jest": "^26.0.24",
     "@types/mersenne-twister": "^1.1.2",
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
     "@types/spark-md5": "^3.0.2",
+    "changedpi": "^1.0.4",
+    "codemirror": "^5.65.3",
+    "hack-font": "^3.3.0",
     "html-entities": "^2.3.3",
     "jose": "^4.6.1",
     "lorem-ipsum": "^2.0.4",
@@ -24,6 +28,7 @@
     "mobx-react-lite": "^3.3.0",
     "mobx-state-tree": "^5.1.3",
     "mobx-utils": "^6.0.4",
+    "rasterizehtml": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.1",
